[gd_scene load_steps=7 format=3 uid="uid://dta8ywnphhy4"]

[ext_resource type="Script" path="res://scripts/scene/day_night_cycle.gd" id="1_5w26l"]
[ext_resource type="PackedScene" uid="uid://i2jd74yhry5i" path="res://scenes/ui/shop.tscn" id="2_4icya"]
[ext_resource type="Material" uid="uid://celier85v7yle" path="res://themes/stars.tres" id="2_7r81v"]
[ext_resource type="Material" uid="uid://cw2be0x50bqyu" path="res://scenes/world/fodg_background.tres" id="2_xq1xq"]
[ext_resource type="FontFile" uid="uid://cy42r8xkucbyj" path="res://assets/ui/Minecraft.ttf" id="3_ldyky"]
[ext_resource type="Theme" uid="uid://bas6smt1iwb1f" path="res://themes/ui_theme.tres" id="4_yod8p"]

[node name="DayNightCycle" type="Node2D"]
script = ExtResource("1_5w26l")
metadata/_edit_lock_ = true

[node name="MAINGAMECAMERAREFERENCE" type="ReferenceRect" parent="."]
offset_left = -275.0
offset_top = -154.0
offset_right = 275.0
offset_bottom = 154.0

[node name="Background" type="ColorRect" parent="."]
z_index = -1
material = ExtResource("2_7r81v")
offset_left = -288.0
offset_top = -160.0
offset_right = 1632.0
offset_bottom = 920.0
scale = Vector2(0.3, 0.3)

[node name="Background2" type="ColorRect" parent="Background"]
material = ExtResource("2_xq1xq")
layout_mode = 0
offset_right = 6400.0
offset_bottom = 3589.0
scale = Vector2(0.3, 0.3)

[node name="Light" type="DirectionalLight2D" parent="."]
visible = false
energy = 0.0
height = 0.59

[node name="SkipDay" type="Button" parent="."]
z_index = 4096
offset_left = 198.0
offset_top = 121.0
offset_right = 273.0
offset_bottom = 152.0
theme = ExtResource("4_yod8p")
theme_override_font_sizes/font_size = 16
text = "Skip Day"
metadata/_edit_use_anchors_ = true

[node name="EndOfDayScreen" type="Panel" parent="."]
visible = false
self_modulate = Color(0, 0, 0, 1)
offset_left = -283.0
offset_top = -156.0
offset_right = 282.0
offset_bottom = 160.0

[node name="Shop" parent="EndOfDayScreen" instance=ExtResource("2_4icya")]
z_index = 4000
layout_mode = 1
offset_left = 85.0
offset_top = 34.0
offset_right = -74.0
offset_bottom = -35.0

[node name="DayEndText" type="Label" parent="EndOfDayScreen"]
layout_mode = 0
offset_left = 29.0
offset_top = 14.0
offset_right = 92.0
offset_bottom = 37.0
theme_override_fonts/font = ExtResource("3_ldyky")
text = "Day End"

[node name="NextDay" type="Button" parent="EndOfDayScreen"]
z_index = 4001
layout_mode = 0
offset_left = 396.0
offset_top = 38.0
offset_right = 488.0
offset_bottom = 74.0
theme_override_fonts/font = ExtResource("3_ldyky")
theme_override_font_sizes/font_size = 16
text = "NextDay
"

[node name="Sprite2D" type="Sprite2D" parent="EndOfDayScreen"]

[node name="TimerLabel" type="Label" parent="."]
z_index = 4000
offset_left = -20.0
offset_top = -148.0
offset_right = 20.0
offset_bottom = -125.0
theme_override_fonts/font = ExtResource("3_ldyky")
